--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@
 # Go workspace file
 go.work
 go.work.sum
+
+# Binaries
+service-exporter
+
+# Build directories
+build/
+
+# IDE files
+.vscode/
+.idea/
