--- a/.slsa-goreleaser.yml
+++ b/.slsa-goreleaser.yml
@@ -19,7 +19,7 @@ goos: linux
 goarch: amd64
 
 # (Optional) Entrypoint to compile.
-main: ./src/main.go
+main: ./src/.
 
 # (Optional) Working directory. (default: root of the project)
 # dir: ./relative/path/to/dir
